fix: buttom Cadastrar

--- a/src/main/resources/public/create_user.html
+++ b/src/main/resources/public/create_user.html
@@ -54,10 +54,9 @@
                 </p>
             </div>
             <div class="center">
-                <button class="btn waves-effect waves-light" id="criar_usuario">Cadastrar
+                <button class="btn waves-effect waves-light" id="criar_usuario" type="submit" name="action">Cadastrar
                     <i class="material-icons right">send</i>
                 </button>
-                <!-- type="submit" name="action" -->
             </div>
         </form>
     </div>
