chore: incluir campo senha

--- a/src/main/resources/public/create_user.html
+++ b/src/main/resources/public/create_user.html
@@ -32,8 +32,18 @@
                     <label for="cidade">Cidade</label>
                 </div>
                 <div class="input-field col l6 s12">
-                    <input id="uf" type="text" class="validate" data-mask="SS">
+                    <input id="uf" type="text" class="validate">
                     <label for="uf">UF</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col l6 s12">
+                    <input id="senha" type="password" class="validate">
+                    <label for="senha">Digite sua senha</label>
+                </div>
+                <div class="input-field col l6 s12">
+                    <input id="confirmar_senha" type="password" class="validate">
+                    <label for="confirmar senha">Confirme sua senha</label>
                 </div>
             </div>
             <div class="row">
