fix: nome dos campos Ano Nascimento e Confirmar...

--- a/src/main/resources/public/create_user.html
+++ b/src/main/resources/public/create_user.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="input-field col l6 s12">
                     <input id="ano_nascimento" type="text" class="validate" data-mask="0000">
-                    <label for="ano_nascimento">Ano de Nascimento (0000)</label>
+                    <label for="anoNascimento">Ano de Nascimento (0000)</label>
                 </div>
             </div>
             <div class="row">
@@ -42,7 +42,7 @@
                     <label for="senha">Digite sua senha</label>
                 </div>
                 <div class="input-field col l6 s12">
-                    <input id="confirmar_senha" type="password" class="validate">
+                    <input id="confirmarSenha" type="password" class="validate">
                     <label for="confirmar senha">Confirme sua senha</label>
                 </div>
             </div>
