reat: addredirecionamento quando criado cadastro

--- a/src/main/resources/public/cadastro.html
+++ b/src/main/resources/public/cadastro.html
@@ -18,7 +18,7 @@
             <form class="offset-">
                 <div class="row">
                     <div class="input-field col l6 s12">
-                        <input id="cpf" type="text" class="validate" data-mask="000.000.000-00">
+                        <input id="cpf" type="text" class="validate" data-mask="000.000.000-00" required>
                         <label for="cpf">CPF (000.000.000-00)</label>
                     </div>
                     <div class="input-field col l6 s12">
@@ -69,11 +69,11 @@
                 </div>
                 <div class="row">
                     <div class="input-field col l6 s12">
-                        <input id="senha" type="password" class="validate">
+                        <input id="senha" type="password" class="validate" required>
                         <label for="senha">Digite sua senha</label>
                     </div>
                     <div class="input-field col l6 s12">
-                        <input id="confirmarSenha" type="password" class="validate">
+                        <input id="confirmarSenha" type="password" class="validate" required>
                         <label for="confirmarSenha">Confirme sua senha</label>
                     </div>
                 </div>
