--- a/src/main/resources/public/cadastro.html
+++ b/src/main/resources/public/cadastro.html
@@ -22,7 +22,7 @@
                         <label for="cpf">CPF (000.000.000-00)</label>
                     </div>
                     <div class="input-field col l6 s12">
-                        <input id="anoNascimento" type="text" class="validate" data-mask="0000">
+                        <input id="anoNascimento" type="text" class="validate" data-mask="0000" required>
                         <label for="anoNascimento">Ano de Nascimento (0000)</label>
                     </div>
                 </div>
