--- a/src/main/resources/public/consultaDadosTerceiros.html
+++ b/src/main/resources/public/consultaDadosTerceiros.html
@@ -6,11 +6,29 @@
     <link rel="stylesheet" href="css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
       
     <title>Consulta de Score</title>
 </head>
 
 <body>
+  <nav class="navibar" role="navigation">
+    <div class="nav-wrapper container">
+      <a id="logo-container" href="/tela-principal.html">
+          <strong>CADASTRO MAIS</strong> 
+      </a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">Conta</a></li>
+        <li><a href="#">Logout</a></li>
+    </ul>
+
+    <ul id="nav-mobile" class="sidenav">
+        <li><a href="#">Conta</a></li>
+        <li><a href="#">Logout</a></li>
+    </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
 <div class="container">
     <h1 class="center">Consulta de Score</h1>
 </div>
