--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -2,13 +2,45 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
-        <title>Titulo</title>
+        <title>Login - Cadastro Mais</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/materialize.min.css">
     </head>
 
     <body>
-
+        <nav class="navibar" role="navigation">
+            <div class="nav-wrapper container">
+                <a id="logo-container" href="/tela-principal.html">
+                    <strong>CADASTRO MAIS</strong> 
+                </a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="#">Início</a></li>
+                    <li><a href="#">Cadastre-se</a></li>
+                </ul>
+            
+                <ul id="nav-mobile" class="sidenav">
+                    <li><a href="#">Início</a></li>
+                    <li><a href="#">Cadastre-se</a></li>
+                </ul>
+                 <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            </div>
+        </nav>
+        <main class="container">
+            <h1 class="center">Login</h1>
+            <form id="loginForm" class="offset-">
+                <div class="row">
+                    <div class="input-field col l6 m12 offset-l3">
+                        <input id="cpf" type="text" class="validate" data-mask="00000000000" required>
+                        <label for="cpf">CPF (00000000000)</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col l6 m12 offset-l3">
+                        <input id="senha" type="password" class="validate" required>
+                        <label for="senha">Digite sua senha</label>
+                    </div>
+                </div>
+        </main>
         <script src="js/materialize.min.js"></script>
     </body>
 </html>
