--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -42,5 +42,6 @@
                 </div>
         </main>
         <script src="js/materialize.min.js"></script>
+        <script src="js/login.js"></script>
     </body>
 </html>
