--- a/src/main/resources/public/tela-principal.html
+++ b/src/main/resources/public/tela-principal.html
@@ -159,7 +159,7 @@
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.min.js"></script>
-  <script src="js/index.js"></script>
+  <script src="js/logado.js"></script>
 
   </body>
 </html>
