gerar score no front-end

--- a/src/main/resources/public/tela-principal.html
+++ b/src/main/resources/public/tela-principal.html
@@ -46,10 +46,10 @@
                 <div class="col s12 l4 card-panel center"> 
                     <div class="center">
                         <h3>SCORE</h3> 
-                        <h3>700</h3> 
+                        <span id="userScore"></span> 
                     </div>
                     <div class="progress blue lighten-4"> 
-                    <div class="determinate green" style="width: 70%"></div> 
+                    <div id="scoreBar" class="" style="width: 70%"></div> 
                     </div>
                     <div class="center  ">
                         <h5>Quer saber como é composto o seu score?</h5>
@@ -159,7 +159,7 @@
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.min.js"></script>
-  <script src="js/index.js"></script>
+  <script src="js/tela-principal.js"></script>
 
   </body>
 </html>
