--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -160,7 +160,7 @@
 
           <div class="col-md-6 col-sm-6 wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
             <br><br><br><br>
-            <img src="images/spc.png" alt="">
+            <img src="images/spc.png" alt="" width="500px">
           </div>
 
           <div class="col-md-6 col-sm-6 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
