--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -51,8 +51,8 @@
     <main class="container">
         <form id="loginForm">
           <div class="form-group">
-            <input id="cpf" type="text" class="validate" data-mask="00000000000" required >
-            <label for="labelCPF">CPF (00000000000)</label>
+            <input id="doc_cli" type="text" class="validate" required >
+            <label for="doc_cli">Nº Documento</label>
           </div>
           <div class="form-group">
             <input type="password" class="validate" id="senha" required >
@@ -62,23 +62,15 @@
         </form>
     </main>
  
-    <script src="js/materialize.min.js"></script>
-    <script src="js/login.js"></script>
+<!--    <script src="js/materialize.min.js"></script>-->
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/login.js"></script>
     <script src="js/material.min.js"></script>
     <script src="js/wow.js"></script>
     <script src="js/classie.js"></script>
-    <script src="js/jquery.nav.js"></script>      
+    <script src="js/jquery.nav.js"></script>
     <script src="js/smooth-scroll.js"></script>
     <script src="js/main.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
-
-    <script>
-        $(document).ready(function() {
-            // This command is used to initialize some elements and make them work properly
-            $.material.init();
-        });
-    </script>
   </body>
 </html>
