--- a/src/main/resources/public/tela-principal.html
+++ b/src/main/resources/public/tela-principal.html
@@ -24,7 +24,7 @@
         <ul class="nav navbar-nav main-navigation">
             <li><a href="consultaDadosTerceiros.html">Consultar CPF de Terceiros</a></li>
             <li><a href="suaConta.html">Sua Conta</a></li>
-            <li><a href="#Logout">Sair</a></li>
+            <li><a id="Logout" href="#">Sair</a></li>
         </ul>
         <button class="close-button" id="close-button">Fechar Menu</button>
     </div>    
@@ -87,8 +87,8 @@
     </main>
     
     <script src="js/materialize.min.js"></script>
-    <script src="js/login.js"></script>
     <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/login.js"></script>
     <script src="js/tela-principal.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/material.min.js"></script>
@@ -98,153 +98,7 @@
     <script src="js/smooth-scroll.js"></script>
     <script src="js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
-    
+    <script src="js/logado.js"></script>
 
   </body>
 </html>
-<!-- 
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Principal - Cadastro Mais</title>
-
-
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-</head>
-<body>
-
-    <ul id="dropdown1" class="dropdown-content">
-    <li><a href="#!">Detalhes da Conta</a></li>
-    <li><a href="#!">Descadastrar</a></li>
-    </ul>
-    <nav class="navibar" role="navigation">
-        <div class="nav-wrapper container">
-            <a id="logo-container" href="/tela-principal.html">
-                <strong>CADASTRO MAIS</strong> 
-            </a>
-            <ul class="right hide-on-med-and-down">
-                <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Sua Conta<i class="material-icons right">arrow_drop_down</i></a></li>
-                <li><a href="#">Logout</a></li>
-            </ul>
-
-            <ul id="nav-mobile" class="sidenav">
-                <li><a href="#">Detalhes da Conta</a></li>
-                <li><a href="#">Descadastrar</a></li>
-                <li><a href="#">Logout</a></li>
-            </ul>
-            <a href="#" data-target="nav-mobile" class="sidenav-trigger">
-                <i class="material-icons">menu</i>
-            </a>
-        </div>
-    </nav>
-
-    <main>
-        <div class="container">  
-            <div class="row">
-                <div class="col s12 l8 center hide-on-med-and-down">
-                    <img src="images/cadastro_mais.jpg" alt="Cadastro Mais" width="600px">
-                </div>
-                <div class="col s12 l4 card-panel center"> 
-                    <div class="center">
-                        <h3>SCORE</h3> 
-                        <span id="userScore"></span> 
-                    </div>
-                    <div class="progress blue lighten-4"> 
-                    <div id="scoreBar" class="" style="width: 70%"></div> 
-                    </div>
-                    <div class="center  ">
-                        <h5>Quer saber como é composto o seu score?</h5>
-                        <p>
-                            Esse é o seu currículo financeiro. 
-                            Com ele, os seus bons hábitos de pagamento podem 
-                            contar pontos positivos para você.
-                        </p>
-                        <a href="#">Saiba Mais</a> 
-                    </div> 
-                </div> 
-            </div> 
-            <div class="row center">
-                <span class="consultar">Consulte um CPF de terceiro</span> 
-                <div class="row">
-                    <a href="#" class="botao">Consulte agora!</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12 m6">
-                    <h4 class="center">O que precisamos saber sobre o Cadastro Mais</h4>
-                    <p>
-                        O Cadastro Positivo reúne, de forma segura, as informações de 
-                        pagamentos que você já fez ou está fazendo.
-                    </p>
-                    <p>
-                        Esses dados ficam guardados num histórico que leva em conta não 
-                        apenas o momento atual, mas toda a sua vida financeira recente.
-                    </p>
-                    <p>                
-                        Você não precisa se preocupar com a segurança das suas 
-                        informações. O SPC Brasil, como empresa gestora de banco de 
-                        dados, está autorizado pelo Banco Central a operar o Cadastro 
-                        Positivo.
-                    </p>
-                </div>
-                <div id="video" class="col s12 m6">
-                    <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/undefined' frameborder='0' allowfullscreen></iframe></div>
-                </div>
-
-            </div>
-
-            <div class="row">
-                <div class="card col s12 m4 l4">
-                    <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="images/alegria.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">
-                            Reconquiste seu bem estar financeiro!
-                        </span>
-                    <p><a href="#">Saiba mais...</a></p>
-                    </div>
-                </div>
-                <div class="card col s12 m4 l4">
-                    <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="images/duvida.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">
-                            Como é calculado o score?
-                        </span>
-                    <p><a href="#">Saiba mais...</a></p>
-                    </div>
-                </div>
-                <div class="card col s12 m4 l4">
-                    <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="images/financas.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">
-                            Negocie suas dívidas agora!
-                        </span>
-                    <p><a href="#">Saiba mais...</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <footer style="background-color: blue;">
-            <div class="container center">
-                Grupo <strong>COMIX</strong> - 3ºsem. Banco de Dados - 
-                <strong>FATEC</strong> São José dos Campos
-            </div>
-        </footer>
-    </main>
-
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.min.js"></script>
-  <script src="js/tela-principal.js"></script>
-
-  </body>
-</html> -->
